--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,17 +47,27 @@ body {
 }
 
 .gradient-green {
-  background-image: linear-gradient(to bottom, rgba(22, 76, 81, 0.4) 0%, rgba(22, 76, 81, 0.4) 30%, rgba(13, 58, 64, 0.09) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(22, 76, 81, 0.4) 0%,
+    rgba(22, 76, 81, 0.4) 30%,
+    rgba(13, 58, 64, 0.09) 100%
+  );
   box-shadow:
     2px 2px 4px #092d32,
     inset 0 1px 2px #16645c;
 }
 
 .gradient-purple {
-  background-image: linear-gradient(to bottom, rgba(35, 75, 124, 0.4) 0%, rgba(35, 75, 124, 0.4) 30%, rgba(18, 46, 79, 0.09) 100%);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(35, 75, 124, 0.4) 0%,
+    rgba(35, 75, 124, 0.4) 30%,
+    rgba(18, 46, 79, 0.09) 100%
+  );
   box-shadow:
-    2px 2px 4px #122C4E,
-    inset 0 1px 2px #2C588D;
+    2px 2px 4px #122c4e,
+    inset 0 1px 2px #2c588d;
 }
 
 .nav-link {
