--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @import 'tw-animate-css';
 
 body {
-  background-color: var(--color-background);
+  background-color: var(--color-primary-500);
   font-family: var(--font-fira-code);
 }
 
@@ -146,14 +146,52 @@ body {
 }
 
 .arrow-key {
-  background-color: var(--background);
-  color: var(--primary);
+  background-color: var(--primary-700);
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 8px;
   border: 1px solid var(--border);
   padding: 8px 18px;
+}
+
+.checkbox {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 18px;
+  height: 18px;
+  border: 1px solid var(--muted);
+  border-radius: 2px;
+  background-color: transparent;
+  cursor: pointer;
+  position: relative;
+  margin: 0;
+}
+
+.checkbox:checked {
+  background-color: var(--muted);
+}
+
+.checkbox:checked::after {
+  content: '';
+  position: absolute;
+  left: 5px;
+  top: 2px;
+  width: 6px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.checkbox:hover {
+  box-shadow: 0 0 0 2.5px rgba(96, 123, 150, 0.4);
+}
+
+.checkmark {
+  position: absolute;
+  pointer-events: none;
 }
 
 @keyframes pulse {
@@ -228,67 +266,49 @@ body {
   }
 }
 
-@custom-variant dark (&:is(.dark *));
-
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
   --font-weight-retina: var(--font-retina);
-  --color-background: var(--background);
+  --color-primary-200: var(--primary-200);
+  --color-primary-400: var(--primary-400);
+  --color-primary-500: var(--primary-500);
+  --color-primary-600: var(--primary-600);
   --color-foreground: var(--foreground);
-  --color-card: var(--card);
-  --color-card-foreground: var(--card-foreground);
-  --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
-  --color-secondary-foreground: var(--secondary-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
   --color-border: var(--border);
-  --color-input: var(--input);
   --color-ring: var(--ring);
   --color-chart-1: var(--chart-1);
   --color-chart-2: var(--chart-2);
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
-  --color-sidebar: var(--sidebar);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-ring: var(--sidebar-ring);
 }
 
 :root {
   --radius: 0.625rem;
   --font-retina: 450;
-  --background: #011627;
   --foreground: #ffffff;
-  --card: #011221;
-  --card-foreground: #607b96;
-  --popover: #011627;
   --popover-foreground: #607b96;
   --primary: #1c2b3a;
   --primary-foreground: #ffffff;
   --secondary: #ffac6b;
-  --secondary-foreground: #011423;
   --muted: #607b96;
   --muted-foreground: #607b96;
   --accent: #fea55f;
   --accent-foreground: #01080e;
   --destructive: #ff7b92;
   --border: #1e2d3d;
-  --input: #011221;
   --ring: #0c1616;
   --chart-1: #4d5bce;
   --chart-2: #43d9ad;
@@ -297,12 +317,49 @@ body {
   --chart-5: #e99287;
 }
 
+:root {
+  /* Primary Scale */
+  --primary-100: #263B50;
+  --primary-200: #1c2b3a;
+  --primary-300: #081C2D;
+  --primary-400: #061B2D;
+  --primary-500: #011627;
+  --primary-600: #011221;
+  --primary-700: #01080E;
+
+  /* Muted Color */
+  --muted-100: #607B96;
+
+  /* Text Colors */
+  --text-primary: #FFFFFF;
+  --text-secondary: var(--muted-100);
+  --text-tertiary: var(--primary-700);
+
+  /* Accent Colors */
+  --accent-orange-400: #FFAC6B;
+  --accent-orange-500: #FEA55F;
+  --accent-green: #43D9AD;
+  --accent-red: #E99287;
+  --accent-purple: #C98BDF;
+  --accent-blue: #4D5BCE;
+
+  /* Destructive */
+  --destructive-500: #FF7B92;
+
+  /* Borders Colors */
+  --border-100: #1E2D3D;
+
+  /* Gradients */
+  --gradient-start: var(--accent-blue);
+  --gradient-end: var(--accent-green);
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-primary-500 text-foreground;
     font-weight: var(--font-weight-retina);
   }
   p,
