Fix add projects

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
 @import 'tailwindcss';
-@import 'tw-animate-css';
 
 body {
-  background-color: var(--color-primary-500);
+  background-color: var(--color-primary-400);
   font-family: var(--font-fira-code);
 }
 
@@ -12,19 +11,19 @@ body {
 
 .custom-scrollbar::-webkit-scrollbar-track {
   background: transparent;
-  border-left: 1px solid var(--border);
-  border-right: 1px solid var(--border);
+  border-left: 1px solid var(--primary-200);
+  border-right: 1px solid var(--primary-200);
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: var(--muted);
+  background-color: var(--muted-100);
   border-radius: 0;
   border: 4.75px solid transparent;
   background-clip: content-box;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: var(--border);
+  background-color: var(--primary-200);
 }
 
 .shiki code {
@@ -53,7 +52,7 @@ body {
   position: absolute;
   left: -0.5rem;
   text-align: right;
-  color: var(--muted); /* text-muted */
+  color: var(--muted-foreground);
   font-size: 0.875rem;
 }
 
@@ -136,22 +135,22 @@ body {
   display: flex;
   align-items: center;
   padding-bottom: 16px;
-  border-right: 1px solid var(--border);
-  color: var(--muted);
+  border-right: 1px solid var(--primary-200);
+  color: var(--muted-foreground);
   transition: color 0.2s;
 }
 
 .nav-link:hover {
-  color: var(--foreground);
+  color: var(--primary-foreground);
 }
 
 .arrow-key {
-  background-color: var(--primary-700);
+  background-color: var(--primary-600);
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 8px;
-  border: 1px solid var(--border);
+  border: 1px solid var(--primary-200);
   padding: 8px 18px;
 }
 
@@ -161,7 +160,7 @@ body {
   -moz-appearance: none;
   width: 18px;
   height: 18px;
-  border: 1px solid var(--muted);
+  border: 1px solid var(--muted-100);
   border-radius: 2px;
   background-color: transparent;
   cursor: pointer;
@@ -170,7 +169,7 @@ body {
 }
 
 .checkbox:checked {
-  background-color: var(--muted);
+  background-color: var(--muted-100);
 }
 
 .checkbox:checked::after {
@@ -267,26 +266,23 @@ body {
 }
 
 @theme inline {
-  --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
   --font-weight-retina: var(--font-retina);
+  --color-primary-100: var(--primary-100);
   --color-primary-200: var(--primary-200);
+  --color-primary-300: var(--primary-300);
   --color-primary-400: var(--primary-400);
   --color-primary-500: var(--primary-500);
   --color-primary-600: var(--primary-600);
-  --color-foreground: var(--foreground);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary);
+  --color-muted-100: var(--muted-100);
+  --color-muted-200: var(--muted-200);
   --color-primary-foreground: var(--primary-foreground);
-  --color-secondary: var(--secondary);
-  --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
+  --color-secondary: var(--secondary);
   --color-accent: var(--accent);
-  --color-accent-foreground: var(--accent-foreground);
   --color-destructive: var(--destructive);
-  --color-border: var(--border);
   --color-ring: var(--ring);
   --color-chart-1: var(--chart-1);
   --color-chart-2: var(--chart-2);
@@ -297,18 +293,9 @@ body {
 
 :root {
   --radius: 0.625rem;
-  --font-retina: 450;
-  --foreground: #ffffff;
-  --popover-foreground: #607b96;
-  --primary: #1c2b3a;
-  --primary-foreground: #ffffff;
   --secondary: #ffac6b;
-  --muted: #607b96;
-  --muted-foreground: #607b96;
   --accent: #fea55f;
-  --accent-foreground: #01080e;
   --destructive: #ff7b92;
-  --border: #1e2d3d;
   --ring: #0c1616;
   --chart-1: #4d5bce;
   --chart-2: #43d9ad;
@@ -318,36 +305,36 @@ body {
 }
 
 :root {
+  /* Fonts */
+  --font-retina: 450;
+
   /* Primary Scale */
-  --primary-100: #263B50;
+  --primary-100: #263b50;
   --primary-200: #1c2b3a;
-  --primary-300: #081C2D;
-  --primary-400: #061B2D;
-  --primary-500: #011627;
-  --primary-600: #011221;
-  --primary-700: #01080E;
+  --primary-300: #061b2d;
+  --primary-400: #011627;
+  --primary-500: #011221;
+  --primary-600: #01080e;
 
   /* Muted Color */
-  --muted-100: #607B96;
+  --muted-100: #607b96;
+  --muted-200: #465e77;
 
   /* Text Colors */
-  --text-primary: #FFFFFF;
-  --text-secondary: var(--muted-100);
-  --text-tertiary: var(--primary-700);
+  --primary-foreground: #ffffff;
+  --muted-foreground: var(--muted-100);
+  --tertiary-foreground: var(--primary-600);
 
   /* Accent Colors */
-  --accent-orange-400: #FFAC6B;
-  --accent-orange-500: #FEA55F;
-  --accent-green: #43D9AD;
-  --accent-red: #E99287;
-  --accent-purple: #C98BDF;
-  --accent-blue: #4D5BCE;
+  --accent-orange-400: #ffac6b;
+  --accent-orange-500: #fea55f;
+  --accent-green: #43d9ad;
+  --accent-red: #e99287;
+  --accent-purple: #c98bdf;
+  --accent-blue: #4d5bce;
 
   /* Destructive */
-  --destructive-500: #FF7B92;
-
-  /* Borders Colors */
-  --border-100: #1E2D3D;
+  --destructive-500: #ff7b92;
 
   /* Gradients */
   --gradient-start: var(--accent-blue);
@@ -356,12 +343,14 @@ body {
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-primary-200 outline-ring/50;
   }
+
   body {
-    @apply bg-primary-500 text-foreground;
+    @apply bg-primary-400 text-primary-foreground;
     font-weight: var(--font-weight-retina);
   }
+
   p,
   h1,
   h2,
@@ -378,6 +367,6 @@ body {
   option,
   label,
   div {
-    font-weight: var(--font-weight-retina);
+    @apply font-retina;
   }
 }
