--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,25 +5,56 @@ body {
   font-family: var(--font-fira-code);
 }
 
-.custom-scrollbar::-webkit-scrollbar {
+.scrollbar-section {
+  overflow-y: auto;
+}
+
+.scrollbar-section::-webkit-scrollbar {
   width: 26px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+.scrollbar-section::-webkit-scrollbar-track {
   background: transparent;
   border-left: 1px solid var(--primary-200);
   border-right: 1px solid var(--primary-200);
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
+.scrollbar-section::-webkit-scrollbar-thumb {
   background-color: var(--muted-100);
   border-radius: 0;
   border: 4.75px solid transparent;
   background-clip: content-box;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+.scrollbar-section::-webkit-scrollbar-thumb:hover {
   background-color: var(--primary-200);
+}
+
+.scrollbar-tabs {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
+.scrollbar-tabs::-webkit-scrollbar {
+  height: 6px;
+}
+
+.scrollbar-tabs::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollbar-tabs::-webkit-scrollbar-thumb {
+  background-color: rgba(96, 123, 150, 0.2);
+  border-radius: 3px;
+  transition: background-color 0.3s;
+}
+
+.scrollbar-tabs::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(96, 123, 150, 0.5);
+}
+
+.scrollbar-tabs::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 .shiki code {
