Fix adjust height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@ body {
   font-family: var(--font-fira-code);
 }
 
+main {
+  height: 100vh;
+  height: 100dvh;
+  flex: 1;
+  overflow: hidden;
+}
+
 .scrollbar-section {
   overflow-y: auto;
 }
