Fix adjust body height

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 
 body {
+  height: 100vh;
   min-height: 100dvh;
   background-color: var(--color-primary-400);
   font-family: var(--font-fira-code);
